--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>recipe filter</title>
+    <title>recipe filters</title>
 </head>
 <body>
 
