--- a/templates/mypage_wishlist.html
+++ b/templates/mypage_wishlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>이건 못 먹지</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -14,47 +14,74 @@
     </script>
 
     <style>
+     .main-contnent {
+         width: 1400px;
+         align-items: center;
+         margin: auto;
+         padding: 10px 10px 10px 10px;
+        }
+     .subtitle {
+        width: 1400px;
+        font-weight: 600;
+        font-size: xxx-large;
+        text-align: center;
+        margin-top: 50px;
+     }
 
-        .main-contnent {
-            width: 1400px;
-            align-items: center;
-            margin: auto;
-            padding: 10px 10px 10px 10px;
-        }
-        .main-logo {
-            width: 1400px;
-            height: 400px;
-            align-items: center;
-            padding-bottom: 80px;
-        }
-        .search-container {
-            margin-bottom: 50px;
-            text-align: center;
-        }
-        .card-columns {
-            width: 1400px;
-        }
+    .sidebar {
+         background-color: darkseagreen;
+         width: 200px;
+         height: 150px;
+         margin-top: 100px;
+         margin-right: 10px;
+         border-radius: 0.25rem;
+     }
 
+     .nav-link {
+         display: block;
+         font-weight: bold;
+         font-size: large;
+         color: white;
+         text-align: center;
+         margin-top: 20px;
+         vertical-align: center;
+     }
 
+     .card-columns {
+         width: 900px;
+         margin-left: 300px;
+     }
+     #main-btn {
+         display: block;
+         background-color: coral;
+         border: coral;
+         margin: auto;
+         margin-top: 40px;
+         margin-bottom: 40px;
+         align-content: center;
+
+     }
     </style>
+
 </head>
 <body>
-    <!-- header file import -->
-    <div id="headers"></div>
+<!-- header file import 로그인 이전 헤더-->
+<div id="headers"></div>
 
-    <div class="main-contnent">
+<div class="main-contnent">
+    <label class="subtitle">찜목록</label>
 
-        <div>
-            <img class="main-logo" src="/img/logo-revised.png">
+        <div class="sidebar">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">개인정보수정</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">찜목록</a>
+                </li>
+                </li>
+            </ul>
         </div>
-
-
-        <div class="search-container">
-            <input class="search_input" type="text" placeholder="Search">
-            <button type="button" class="btn btn-info">검색</button>
-        </div>
-
-
 
         <div class="card-columns" id="cards-box">
             <div class="card">
@@ -65,7 +92,7 @@
                     <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
                     <p class="card-text"> 음식 재료 </p>
                     <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
                 </div>
 
             </div>
@@ -77,7 +104,7 @@
                     <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
                     <p class="card-text"> 음식 재료 </p>
                     <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
                 </div>
 
             </div>
@@ -89,7 +116,7 @@
                     <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
                     <p class="card-text"> 음식 재료 </p>
                     <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
                 </div>
 
             </div>
@@ -101,7 +128,7 @@
                     <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
                     <p class="card-text"> 음식 재료 </p>
                     <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
                 </div>
 
             </div>
@@ -113,7 +140,7 @@
                     <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
                     <p class="card-text"> 음식 재료 </p>
                     <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
                 </div>
 
             </div>
@@ -125,13 +152,15 @@
                     <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
                     <p class="card-text"> 음식 재료 </p>
                     <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
                 </div>
 
             </div>
         </div>
-    </div>
 
-    </div>
+        <button type="button" class="btn btn-primary" id="main-btn">메인페이지로</button>
+
+</div>
+
 </body>
 </html>
