211103 은지 기능 - 회원가입, 로그인 (로그아웃 미완성)

--- a/templates/main.html
+++ b/templates/main.html
@@ -39,13 +39,11 @@
     </style>
 </head>
 <body>
-    <!-- header file import -->
-    <div id="headers"></div>
 
     <div class="main-contnent">
 
         <div>
-            <img class="main-logo" src="/img/logo-revised.png">
+            <img class="main-logo" src="/static/logo-revised.png">
         </div>
 
 
@@ -53,8 +51,6 @@
             <input class="search_input" type="text" placeholder="Search">
             <button type="button" class="btn btn-info">검색</button>
         </div>
-
-
 
         <div class="card-columns" id="cards-box">
             <div class="card">
