--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>recipe filters</title>
+
+    <title>이건 못 먹지</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            showRecipes();
+        });
+
+        function showRecipes() {
+            $.ajax({
+                type: "GET",
+                url: "/recipes",
+                data: {},
+                success: function (response) {
+                    alert("hi")
+
+                    let recipes = response['recipes']
+                    for (let i = 0; i < recipes.length; i++) {
+                        let title = recipes[i]['title']
+                        let hyperlink = recipes[i]['hyperlink']
+                        let image = recipes[i]['image']
+                        let description = recipes[i]['description']
+                        let ingredient = recipes[i]['ingredient']
+                        let category = recipes[i]['category']
+
+                        let temp_html = ` <div class="card">
+                                                <img class="card-img-top"
+                                                     src=${image}
+                                                     alt="Card image cap">
+                                                <div class="card-body">
+                                                    <a href=${hyperlink} class="card-title"> 레시피 이름: ${title}</a>
+                                                    <p class="card-text"> 레시피 재료 : ${ingredient} </p>
+                                                    <p class="card-text"> 레시피 분류 : ${category} </p>
+                                                    <p class="card-text comment"> 레시피 설명: ${description} </p>
+                                                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                                                </div>
+                                            </div>`
+
+                        $('#cards-box').append(temp_html)
+                    }
+                }
+            })
+        }
+
+
+    </script>
+
+    <style>
+
+        .main-content {
+            width: 1400px;
+            align-items: center;
+            margin: auto;
+            padding: 10px 10px 10px 10px;
+        }
+
+        .main-logo {
+            width: 1400px;
+            height: 400px;
+            align-items: center;
+            padding-bottom: 80px;
+        }
+
+        .search-container {
+            margin-bottom: 50px;
+            text-align: center;
+        }
+
+        .card-columns {
+            width: 1400px;
+        }
+
+        .card-img-top {
+            object-fit: cover;
+        }
+
+
+    </style>
 </head>
 <body>
+<!-- header file import -->
+<header>
+    {% include 'header.html' %}
+</header>
 
+</div>
+
+<div class="main-content">
+
+    <div>
+        <img class="main-logo" src="/static/logo-revised.png">
+    </div>
+
+
+    <div class="search-container">
+        <input class="search_input" type="text" placeholder="Search">
+        <button type="button" class="btn btn-info">검색</button>
+    </div>
+
+
+    <div class="card-columns" id="cards-box">
+        <div class="card">
+            <img class="card-img-top"
+                 src="https://images.chosun.com/resizer/k6L-J7LOYHpzi7J0o6f-LAfbtVw=/464x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/RWXHN2ZUBBXGLLFHBULDVSWBAA.jpg"
+                 alt="Card image cap">
+            <div class="card-body">
+                <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
+                <p class="card-text"> 음식 재료 </p>
+                <p class="card-text"> 음식 분류 </p>
+                <p class="card-text comment"> 음식 설명 </p>
+                <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+            </div>
+    </div>
+</div>
+
+</div>
 </body>
 </html>
