--- a/templates/header.html
+++ b/templates/header.html
@@ -35,10 +35,8 @@
         width: 80px;
         text-align: left;
     }
-    #idpw-input {
-        border: 1px solid #ced4da;
-        border-radius: 0.25rem;
-        margin-right: 10px;
+    .welcome {
+        margin-right: 20px;
     }
     .btn {
         height: 32px;
@@ -63,11 +61,9 @@
 <div class="header">
     <div class="login-info">
         <img class="img" src="/static/broccoli-fruit-green-healthy-vegetable_107405.png">
-
-        <label class="label">ID: </label> <input class="input-box" id="idpw-input" placeholder=" ID를 입력해주세요">
-        <label class="label">PW: </label> <input class="input-box" id="idpw-input" placeholder=" PW를 입력해주세요">
-        <button type="button" class="btn btn-primary" id="login-btn">로그인</button>
-        <button type="button" class="btn btn-info">회원가입</button>
+        <label class="welcome">_______님 환영합니다 </label>
+        <button type="button" class="btn btn-primary" id="login-btn">마이페이지</button>
+        <button type="button" class="btn btn-info">로그아웃</button>
     </div>
 
 </div>
