--- a/templates/index.html
+++ b/templates/index.html
@@ -26,15 +26,15 @@
         });
 
         function showRecipesHelp(recipes) {
-             for (let i = 0; i < recipes.length; i++) {
-                 let title = recipes[i]['title']
-                 let hyperlink = recipes[i]['hyperlink']
-                 let image = recipes[i]['image']
-                 let description = recipes[i]['description']
-                 let ingredient = recipes[i]['ingredient']
-                 let category = recipes[i]['category']
+            for (let i = 0; i < recipes.length; i++) {
+                let title = recipes[i]['title']
+                let hyperlink = recipes[i]['hyperlink']
+                let image = recipes[i]['image']
+                let description = recipes[i]['description']
+                let ingredient = recipes[i]['ingredient']
+                let category = recipes[i]['category']
 
-                 let temp_html = ` <div class="card">
+                let temp_html = ` <div class="card">
                                                 <img class="card-img-top"
                                                      src=${image}
                                                      alt="Card image cap">
@@ -47,8 +47,24 @@
                                                 </div>
                                             </div>`
 
-                 $('#cards-box').append(temp_html)
-             }
+                let filtered_temp_html = ` <div class="card">
+                                                <img class="card-img-top"
+                                                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsyjy0oSwyUXMEvpdNHo-hQ3cyLcDpnKYe6Q&usqp=CAU"
+                                                     alt="Card image cap">
+                                                <div class="card-body">
+                                                    <a href=${hyperlink} class="card-title"> 레시피 이름: ${title}</a>
+                                                    <p class="card-text"> 레시피 재료 : ${ingredient} </p>
+                                                    <p class="card-text"> 레시피 분류 : ${category} </p>
+                                                    <p class="card-text comment"> 레시피 설명: ${description} </p>
+                                                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                                                </div>
+                                            </div>`
+                if('filter' in recipes[i]){
+                     $('#cards-box').append(filtered_temp_html)
+                    console.log(recipes[i]['filter'])
+                } else
+                    $('#cards-box').append(temp_html)
+            }
         }
 
         function showRecipes() {
@@ -70,9 +86,22 @@
             $('#cards-box').empty()
 
             $.ajax({
-                type: "POST",
+                type: "GET",
                 url: apiUrl,
                 data: {keyword_give: keyword},
+                success: function (response) {
+                    let recipes = response['recipes']
+                    showRecipesHelp(recipes)
+                }
+            })
+        }
+
+        function filterRecipes(category) {
+
+            $.ajax({
+                type: "POST",
+                url: "/filter/" + category,
+                data: {category_give: category},
                 success: function (response) {
                     let recipes = response['recipes']
                     showRecipesHelp(recipes)
@@ -104,7 +133,7 @@
             text-align: center;
         }
 
-         .category-button {
+        .category-button {
             text-align: center;
             margin-bottom: 100px;
         }
@@ -154,18 +183,18 @@
     <label id="lets-click">제외 원하는 재료를 클릭해 보세요!</label>
 
     <div class="category-button">
-            <button type="button" class="btn btn-info">육류</button>
-            <button type="button" class="btn btn-info">해산물</button>
-            <button type="button" class="btn btn-info">채소</button>
-            <button type="button" class="btn btn-info">탄수화물</button>
-            <button type="button" class="btn btn-info">유제품</button>
+        <button type="button" onclick="filterRecipes('category1')" class="btn btn-info">육류</button>
+        <button type="button" onclick="filterRecipes('category2')" class="btn btn-info">해산물</button>
+        <button type="button" onclick="filterRecipes('category5')" class="btn btn-info">채소</button>
+        <button type="button" onclick="filterRecipes('category4')" class="btn btn-info">탄수화물</button>
+        <button type="button" onclick="filterRecipes('category3')" class="btn btn-info">유제품</button>
     </div>
 
 
     <div class="card-columns" id="cards-box">
-        <div class="card">
+        <div class="card" >
             <img class="card-img-top"
-                 src="https://images.chosun.com/resizer/k6L-J7LOYHpzi7J0o6f-LAfbtVw=/464x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/RWXHN2ZUBBXGLLFHBULDVSWBAA.jpg"
+                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsyjy0oSwyUXMEvpdNHo-hQ3cyLcDpnKYe6Q&usqp=CAU"
                  alt="Card image cap">
             <div class="card-body">
                 <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
@@ -174,8 +203,8 @@
                 <p class="card-text comment"> 음식 설명 </p>
                 <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
             </div>
+        </div>
     </div>
-</div>
 
 </div>
 </body>
