--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,10 @@
+ {%with messages = get_flashed_messages()%}
+  {%if messages %}
+    <script type="text/javascript">
+      alert("{{messages[-1]}}");
+    </script>
+    {%endif%}
+  {%endwith%}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -43,7 +50,7 @@
                                                     <p class="card-text"> 레시피 재료 : ${ingredient} </p>
                                                     <p class="card-text"> 레시피 분류 : ${category} </p>
                                                     <p class="card-text comment"> 레시피 설명: ${description} </p>
-                                                    <button type="button" class="btn btn-primary" id="login-btn">찜하기</button>
+                                                    <button type="button" class="btn btn-primary" id="login-btn" <button type="button" class="btn btn-primary" id="login-btn" onclick="window.location.href='/wishlistplus?title=${title}'">찜하기</button>
                                                 </div>
                                             </div>`
 
