211104 은지 기능 - 개인정보수정

--- a/templates/header.html
+++ b/templates/header.html
@@ -74,7 +74,7 @@
     <div class="login-info">
         <img class="img" src="/static/broccoli-fruit-green-healthy-vegetable_107405.png">
         <label class="welcome">{{ user_info }}님 환영합니다 </label>
-        <button type="button" class="btn btn-primary" id="login-btn">마이페이지</button>
+        <button type="button" class="btn btn-primary" id="login-btn" onclick="window.location.href='/mypage_info'">마이페이지</button>
         <button type="button" class="btn btn-info" onclick="logout()">로그아웃</button>
     </div>
 
