211104 성범 - 이미지 파일 업로드

--- a/templates/index.html
+++ b/templates/index.html
@@ -183,7 +183,7 @@
 <div class="main-content">
 
     <div>
-        <img class="main-logo" src="/static/banner_image.png">
+        <img class="main-logo" style="border-radius: 30px" src="/static/banner_image.png">
     </div>
 
     <div class="search-container">
