--- a/templates/login.html
+++ b/templates/login.html
@@ -33,9 +33,10 @@
             }
 
             .section {
-                padding: 1rem 1.5rem;
+                /*padding: 1rem 1.5rem;*/
                 max-width: 750px;
                 margin: auto;
+                padding-top: 100px; /*추가*/
             }
 
             .title {
