도연 pull하기 전 커밋2

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                                                     <p class="card-text"><span style="font-weight:bold"> 레시피 재료: </span> ${ingredient} </p>
                                                     <p class="card-text"><span style="font-weight:bold"> 레시피 분류 : </span>${category} </p>
                                                     <p class="card-text comment"><span style="font-weight:bold">레시피 설명: </span>${description} </p>
-                                                    <button type="button" class="btn btn-primary" id="login-btn"  onclick="onclick="wishplus()">찜하기</button>
+                                                    <button type="button" class="btn btn-primary" id="login-btn"  onclick="window.location.href='/wishlistplus?title=${title}'">찜하기</button>
                                                 </div>
                                             </div>`
 
