--- a/templates/mypage_info.html
+++ b/templates/mypage_info.html
@@ -67,7 +67,6 @@
 
         .section {
             max-width: 1400px;
-            height: 750px;
             margin: auto;
             padding-top: 50px;
             position: relative;
@@ -252,7 +251,7 @@
                     <a class="nav-link active" aria-current="page" href="#">개인정보수정</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">찜목록</a>
+                    <a class="nav-link" href="/wishlist">찜목록</a>
                 </li>
                 </li>
             </ul>
