--- a/templates/mypage_wishlist.html
+++ b/templates/mypage_wishlist.html
@@ -65,16 +65,13 @@
          margin: auto;
          margin-top: 40px;
          margin-bottom: 40px;
-         align-content: center;
+         align-content:center;
 
      }
-     .card{
-         height: 800px;
-     }
+
     </style>
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#cards-box').empty();
             showRecipes();
         });
 
@@ -93,15 +90,15 @@
                         let ingredient = recipes[i]['ingredient']
                         let category = recipes[i]['category']
 
-                        let temp_html = ` <div class="card">
+                        let temp_html = ` <div class="card" property="height:750px" style="box-shadow: 3px 3px 3px grey;; border-radius: 10px;" >
                                                 <img class="card-img-top"
                                                      src=${image}
                                                      alt="Card image cap">
-                                                <div class="card-body">
-                                                    <a href=${hyperlink} class="card-title"> 레시피 이름: ${title}</a>
-                                                    <p class="card-text"> 레시피 재료 : ${ingredient} </p>
-                                                    <p class="card-text"> 레시피 분류 : ${category} </p>
-                                                    <p class="card-text comment"> 레시피 설명: ${description} </p>
+                                                <div class="card-body" style="overflow: scroll; text-overflow: fade; white-space: normal;height: 310px;">
+                                                    <a href=${hyperlink} class="card-title"><span style="font-weight:bold"> 레시피 이름: </span>${title}</a>
+                                                    <p class="card-text"><span style="font-weight:bold"> 레시피 재료: </span> ${ingredient} </p>
+                                                    <p class="card-text"><span style="font-weight:bold"> 레시피 분류 : </span>${category} </p>
+                                                    <p class="card-text comment"><span style="font-weight:bold">레시피 설명: </span>${description} </p>
                                                     <button type="button" class="btn btn-primary" id="login-btn" onclick="window.location.href='/wishlistminus?title=${title}'">찜삭제</button>
                                                 </div>
                                             </div>`
@@ -121,11 +118,11 @@
 
 <div class="main-contnent">
     <label class="subtitle">찜목록</label>
-
+        <button type="button" class="btn btn-primary" id="main-btn" onclick="window.location.href='/'">메인페이지로</button>
         <div class="sidebar">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">개인정보수정</a>
+                    <a class="nav-link active" aria-current="page" href="/mypage_info">개인정보수정</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">찜목록</a>
@@ -135,22 +132,8 @@
         </div>
 
         <div class="card-columns" id="cards-box">
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://images.chosun.com/resizer/k6L-J7LOYHpzi7J0o6f-LAfbtVw=/464x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/RWXHN2ZUBBXGLLFHBULDVSWBAA.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="https://www.10000recipe.com/recipe/6967794" class="card-title"> 음식 이름</a>
-                    <p class="card-text"> 음식 재료 </p>
-                    <p class="card-text comment"> 음식 설명 </p>
-                    <button type="button" class="btn btn-primary" id="login-btn">찜삭제</button>
-                </div>
-
-            </div>
 
         </div>
-
-        <button type="button" class="btn btn-primary" id="main-btn">메인페이지로</button>
 
 </div>
 
