도연 header버튼/사이드바 제거

--- a/templates/mypage_info.html
+++ b/templates/mypage_info.html
@@ -70,7 +70,7 @@
             margin: auto;
             padding-top: 50px;
             position: relative;
-            background-color: beige;
+            background-color: mediumseagreen;
             border-radius: 0.5rem;
         }
 
@@ -244,18 +244,6 @@
 
 <div class="main-contnent">
  <label class="subtitle">개인정보 수정</label>
-
-        <div class="sidebar">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">개인정보수정</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/wishlist">찜목록</a>
-                </li>
-                </li>
-            </ul>
-        </div>
 
     <section class="section">
         <div class="container" style="max-height: 480px;">
