--- a/templates/mypage_info.html
+++ b/templates/mypage_info.html
@@ -41,6 +41,7 @@
             font-size: xxx-large;
             text-align: center;
             margin-top: 50px;
+            padding-bottom: 30px;
         }
 
         .sidebar {
@@ -67,6 +68,7 @@
 
         .section {
             max-width: 1400px;
+            min-height: 740px;
             margin: auto;
             padding-top: 50px;
             position: relative;
