211105 성범 - 카드뷰 가로순으로 나오게 수정, 화면 alignment 수정(css)

--- a/templates/index.html
+++ b/templates/index.html
@@ -226,7 +226,7 @@
     </div>
 
 
-    <div class="card-columns" id="cards-box">
+    <div class="card-columns" id="cards-box" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
 
 
     </div>
