--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
             margin-right: 20px;
             background-color: orange;
             margin-right: 20px;
-            width: 100px;
+            width: 150px;
             height: 50px;
             font-size: x-large;
         }
@@ -193,7 +193,6 @@
             object-fit: cover;
         }
 
-
     </style>
 </head>
 <body style="background-color:#f1e12c">
@@ -218,11 +217,11 @@
     <label id="lets-click">제외 원하는 재료를 클릭해 보세요!</label>
 
     <div class="category-button">
-        <button type="button" onclick="filterRecipes('category1')" class="btn btn-info">육류</button>
-        <button type="button" onclick="filterRecipes('category2')" class="btn btn-info">해산물</button>
-        <button type="button" onclick="filterRecipes('category5')" class="btn btn-info">채소</button>
-        <button type="button" onclick="filterRecipes('category4')" class="btn btn-info">탄수화물</button>
-        <button type="button" onclick="filterRecipes('category3')" class="btn btn-info">유제품</button>
+        <button type="button" onclick="filterRecipes('category1')" class="btn btn-info"><img class="btn-img" src="/static/meat.png">육류</button>
+        <button type="button" onclick="filterRecipes('category2')" class="btn btn-info"><img class="btn-img" src="/static/crab.png">해산물</button>
+        <button type="button" onclick="filterRecipes('category5')" class="btn btn-info"><img class="btn-img" src="/static/vege.png">채소</button>
+        <button type="button" onclick="filterRecipes('category4')" class="btn btn-info"><img class="btn-img" src="/static/bread.png">탄수화물</button>
+        <button type="button" onclick="filterRecipes('category3')" class="btn btn-info"><img class="btn-img" src="/static/milk.png">유제품</button>
     </div>
 
 
